--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "SubclassParameter",
+  "name": "SubclassInstance",
   "version": "0.1.0",
   "authors": [
     "Dmitriy Osipishin | <msdoom2011@gmail.com>"
   ],
-  "description": "The plugin for SubclassJS framework which brings ability to define parameters that will be available all over your SubclassJS application.",
+  "description": "The plugin for Subclass framework which allows to create module instances",
   "main": "Gruntfile.js",
   "license": "MIT",
   "private": true
