--- a/Gruntfile.config.json
+++ b/Gruntfile.config.json
@@ -7,7 +7,10 @@
       "src": "<%= config.src_dir %>",
       "release": "<%= config.release_dir %>"
     },
-    "files": "**/*.js",
+    "files": [
+      "ModuleInstance.js",
+      "**/*.js"
+    ],
     "files_release": {
       "normal": "<%= config.lib.dir.release %>/<%= config.name %>.js",
       "minimized": "<%= config.lib.dir.release %>/<%= config.name %>.min.js"
